--- a/public/index.html
+++ b/public/index.html
@@ -10,22 +10,29 @@
 
 <body>
   <div class="container">
+    <div class="header-bar"></div>
     <header class="header">
-      <h1 class="header__headline">
-        The Simple Grid Example
-      </h1>
+      <div class="wrapper">
+        <h1 class="header__headline">
+          The Simple Grid Example
+        </h1>
+      </div>
     </header>
     <nav class="nav">
-      <ul class="navigation">
-        <li class="navigation__item">Link1</li>
-        <li class="navigation__item">Link2</li>
-        <li class="navigation__item">Link3</li>
-        <li class="navigation__item">Link4</li>
-      </ul>
+       <div class="wrapper">
+         <ul class="navigation">
+           <li class="navigation__item">Link1</li>
+           <li class="navigation__item">Link2</li>
+           <li class="navigation__item">Link3</li>
+           <li class="navigation__item">Link4</li>
+         </ul>
+       </div>
     </nav>
 
     <div class="sidebar">
-      Sidebar
+      <div class="wrapper">
+        Sidebar
+      </div>
     </div>
 
     <main class="main">
@@ -39,7 +46,7 @@
           Sie ein paar Zeilen lesen.
         </p>
         <p>
-          Denn esse est 
+          Denn esse est
           <a href="#">percipi</a> - Sein ist wahrgenommen werden. Und weil Sie nun schon die Güte haben, mich ein paar weitere Sätze
           lang zu begleiten, möchte ich diese Gelegenheit nutzen, Ihnen nicht nur als Lückenfüller zu dienen, sondern auf
           etwas <a href="#">hinzuweisen</a>, das es ebenso verdient wahrgenommen zu werden: Webstandards nämlich. Sehen Sie, Webstandards
@@ -55,12 +62,16 @@
       </div>
     </main>
 
+
+    <div class="footer-bar">
+      <div class="wrapper">
+        Footer
+      </div>
+    </div>
     <footer class="footer">
-      FOOTER
+
     </footer>
   </div>
-
-
 </body>
 
 </html>
